correct background size

--- a/posts/.vuepress/styles/index.styl
+++ b/posts/.vuepress/styles/index.styl
@@ -4,6 +4,7 @@ html
 body
     min-height: 100%
     background: #fff url(/img/background.jpg) bottom fixed
+    background-size: cover
 
 .content
     background: #fff
